--- a/lib/tangosource_library_project_web/templates/layout/app.html.eex
+++ b/lib/tangosource_library_project_web/templates/layout/app.html.eex
@@ -10,14 +10,9 @@
   <body>
     <header>
       <section class="container">
-        <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-          </ul>
-        </nav>
-        <a href="http://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
+        <%= link to: Routes.books_path(@conn, :index) do %>
+          <h1><%= gettext "The TangoSource Library Project" %></h1>
+        <% end %>
       </section>
     </header>
     <main role="main" class="container">
